testL notification 서비스 단위/ 레포지터리 테스트 작성